@@ -497,6 +497,7 @@ try {
         Write-Host "BcContainerHelper is running inside a Container"
     }
     Write-Host "UsePsSession is $($bcContainerHelperConfig.UsePsSession)"
+    Write-Host "UsePwshForBc24 is $($bcContainerHelperConfig.UsePwshForBc24)"
     Write-Host "Host is $($os.Caption) - $hostOsVersion"
 
     $dockerProcess = (Get-Process "dockerd" -ErrorAction Ignore)
@@ -1724,7 +1725,7 @@ Get-NavServerUser -serverInstance $ServerInstance -tenant default |? LicenseType
 
     if ($version.Major -ge 24) {
         ('
-if (!(Get-Command "invoke-sqlcmd" -ErrorAction SilentlyContinue)) { Install-package SqlServer -Force -RequiredVersion 21.1.18256 | Out-Null }
+if (!(Get-Command "invoke-sqlcmd" -ErrorAction SilentlyContinue)) { try { Write-Host "Installing SqlServer module"; Install-package SqlServer -Force -RequiredVersion 21.1.18256 | Out-Null } catch { Write-Host "Failed to install SqlServer module" } }
 ') | Add-Content -Path "$myfolder\HelperFunctions.ps1"
     }
 
